[tool.poetry]
name = "aws-connection-broker"
version = "1.0.0"
description = ""
authors = ["Jon Bogaty <jon@jonbogaty.com>"]
readme = "README.md"
packages = [{include = "aws_connection_broker"}]

[tool.poetry.dependencies]
python = "^3.12"
gitops-utils = {git = "https://github.com/jbcom/gitops-utils.git"}
aws-assume-role-lib = "^2.10.0"
boto3 = "^1.34.50"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"


[tool.black]
line-length = 88
target-version = ["py312"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"